battle of the ice

--- a/index.html
+++ b/index.html
@@ -85,6 +85,8 @@
     <link rel="stylesheet" href="css/calendar.bermuda-triangle.css">
     <link rel="stylesheet" href="css/calendar.black-hole.css">
     <link rel="stylesheet" href="css/calendar.melting-glaciers.css">
+    <link rel="stylesheet" href="css/calendar.battle-of-the-ice.css">
+
 
 
     
@@ -213,6 +215,7 @@
                 <option value="bermuda-triangle">Bermuda Triangle</option>
                 <option value="black-hole">Black Hole</option>
                 <option value="melting-glaciers">Melting Glaciers</option>
+                <option value="battle-of-the-ice">Battle of the ice</option>
 
                 
 
