--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <link rel="stylesheet" href="css/calendar.black-hole.css">
     <link rel="stylesheet" href="css/calendar.melting-glaciers.css">
     <link rel="stylesheet" href="css/calendar.battle-of-the-ice.css">
-
+    <link rel="stylesheet" href="css/calendar.medieval-knights.css">
 
 
     
@@ -216,6 +216,7 @@
                 <option value="black-hole">Black Hole</option>
                 <option value="melting-glaciers">Melting Glaciers</option>
                 <option value="battle-of-the-ice">Battle of the ice</option>
+                <option value="medieval-knights">Medieval Knights</option>
 
                 
 
