--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
     <link rel="stylesheet" href="css/calendar.melting-glaciers.css">
     <link rel="stylesheet" href="css/calendar.battle-of-the-ice.css">
     <link rel="stylesheet" href="css/calendar.medieval-knights.css">
+    <link rel="stylesheet" href="css/calendar.winter-wonderland.css">
 
 
     
@@ -217,7 +218,7 @@
                 <option value="melting-glaciers">Melting Glaciers</option>
                 <option value="battle-of-the-ice">Battle of the ice</option>
                 <option value="medieval-knights">Medieval Knights</option>
-
+                <option value="winter-wonderland">Winter Wonderland</option>
                 
 
 
