--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
     <link rel="stylesheet" href="css/calendar.battle-of-the-ice.css">
     <link rel="stylesheet" href="css/calendar.medieval-knights.css">
     <link rel="stylesheet" href="css/calendar.winter-wonderland.css">
+    <link rel="stylesheet" href="css/calendar.mammoth-tusk.css">
 
 
     
@@ -219,6 +220,7 @@
                 <option value="battle-of-the-ice">Battle of the ice</option>
                 <option value="medieval-knights">Medieval Knights</option>
                 <option value="winter-wonderland">Winter Wonderland</option>
+                <option value="mammoth-tusk">Mammoth Tusk</option>
                 
 
 
