--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     <link rel="stylesheet" href="css/calendar.medieval-knights.css">
     <link rel="stylesheet" href="css/calendar.winter-wonderland.css">
     <link rel="stylesheet" href="css/calendar.mammoth-tusk.css">
-
+    <link rel="stylesheet" href="css/calendar.emerald-stream.css">
 
     
 
@@ -221,6 +221,7 @@
                 <option value="medieval-knights">Medieval Knights</option>
                 <option value="winter-wonderland">Winter Wonderland</option>
                 <option value="mammoth-tusk">Mammoth Tusk</option>
+                <option value="emerald-stream">Emerald Stream</option>
                 
 
 
