--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <link rel="stylesheet" href="css/calendar.winter-wonderland.css">
     <link rel="stylesheet" href="css/calendar.mammoth-tusk.css">
     <link rel="stylesheet" href="css/calendar.emerald-stream.css">
-
+    <link rel="stylesheet" href="css/calendar.north-pole.css">
     
 
 
@@ -222,6 +222,7 @@
                 <option value="winter-wonderland">Winter Wonderland</option>
                 <option value="mammoth-tusk">Mammoth Tusk</option>
                 <option value="emerald-stream">Emerald Stream</option>
+                <option value="north-pole">North Pole</option>
                 
 
 
