--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
     <link rel="stylesheet" href="css/calendar.mammoth-tusk.css">
     <link rel="stylesheet" href="css/calendar.emerald-stream.css">
     <link rel="stylesheet" href="css/calendar.north-pole.css">
+    <link rel="stylesheet" href="css/calendar.black-hawk.css">
     
 
 
@@ -223,6 +224,7 @@
                 <option value="mammoth-tusk">Mammoth Tusk</option>
                 <option value="emerald-stream">Emerald Stream</option>
                 <option value="north-pole">North Pole</option>
+                <option value="black-hawk">Black Hawk</option>
                 
 
 
