--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
     <link rel="stylesheet" href="css/calendar.emerald-stream.css">
     <link rel="stylesheet" href="css/calendar.north-pole.css">
     <link rel="stylesheet" href="css/calendar.black-hawk.css">
+    <link rel="stylesheet" href="css/calendar.blue-bird.css">
     
 
 
@@ -225,6 +226,7 @@
                 <option value="emerald-stream">Emerald Stream</option>
                 <option value="north-pole">North Pole</option>
                 <option value="black-hawk">Black Hawk</option>
+                <option value="blue-bird">Blue Bird</option>
                 
 
 
