--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
     <link rel="stylesheet" href="css/calendar.north-pole.css">
     <link rel="stylesheet" href="css/calendar.black-hawk.css">
     <link rel="stylesheet" href="css/calendar.blue-bird.css">
+    <link rel="stylesheet" href="css/calendar.aloe-vera.css">
     
 
 
@@ -227,6 +228,7 @@
                 <option value="north-pole">North Pole</option>
                 <option value="black-hawk">Black Hawk</option>
                 <option value="blue-bird">Blue Bird</option>
+                <option value="aloe-vera">Aloe Vera</option>
                 
 
 
