--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
     <link rel="stylesheet" href="css/calendar.blue-bird.css">
     <link rel="stylesheet" href="css/calendar.aloe-vera.css">
     <link rel="stylesheet" href="css/calendar.port-victoria.css">
+    <link rel="stylesheet" href="css/calendar.alpine-landscape.css">
     
 
 
@@ -231,6 +232,7 @@
                 <option value="blue-bird">Blue Bird</option>
                 <option value="aloe-vera">Aloe Vera</option>
                 <option value="port-victoria">Port Victoria</option>
+                <option value="alpine-landscape">Alpine Landscape</option>
                 
 
 
