--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
     <link rel="stylesheet" href="css/calendar.aloe-vera.css">
     <link rel="stylesheet" href="css/calendar.port-victoria.css">
     <link rel="stylesheet" href="css/calendar.alpine-landscape.css">
+    <link rel="stylesheet" href="css/calendar.mount-fuji.css">
     
 
 
@@ -233,6 +234,7 @@
                 <option value="aloe-vera">Aloe Vera</option>
                 <option value="port-victoria">Port Victoria</option>
                 <option value="alpine-landscape">Alpine Landscape</option>
+                <option value="mount-fuji">Mount Fuji</option>
                 
 
 
