--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
     <link rel="stylesheet" href="css/calendar.port-victoria.css">
     <link rel="stylesheet" href="css/calendar.alpine-landscape.css">
     <link rel="stylesheet" href="css/calendar.mount-fuji.css">
+    <link rel="stylesheet" href="css/calendar.niagara-falls.css">
     
 
 
@@ -235,6 +236,7 @@
                 <option value="port-victoria">Port Victoria</option>
                 <option value="alpine-landscape">Alpine Landscape</option>
                 <option value="mount-fuji">Mount Fuji</option>
+                <option value="niagara-falls">Niagara Falls</option>
                 
 
 
