--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
     <link rel="stylesheet" href="css/calendar.alpine-landscape.css">
     <link rel="stylesheet" href="css/calendar.mount-fuji.css">
     <link rel="stylesheet" href="css/calendar.niagara-falls.css">
+    <link rel="stylesheet" href="css/calendar.heavy-rain.css">
     
 
 
@@ -237,6 +238,7 @@
                 <option value="alpine-landscape">Alpine Landscape</option>
                 <option value="mount-fuji">Mount Fuji</option>
                 <option value="niagara-falls">Niagara Falls</option>
+                <option value="heavy-rain">Heavy Rain</option>
                 
 
 
