--- a/index.html
+++ b/index.html
@@ -103,6 +103,8 @@
     <link rel="stylesheet" href="css/calendar.porcupine-quill.css">
     <link rel="stylesheet" href="css/calendar.genghis-khan-arrow.css">
     <link rel="stylesheet" href="css/calendar.okinawa-breeze.css">
+    <link rel="stylesheet" href="css/calendar.weekend-downtime.css">
+
 
 
 
@@ -247,6 +249,7 @@
                 <option value="porcupine-quill">Porcupine Quill</option>
                 <option value="genghis-khan-arrow">Genghis Khan Arrow</option>
                 <option value="okinawa-breeze">Okinawa Breeze</option>
+                <option value="weekend-downtime">Weekend Downtime</option>
                 
                 
 
