--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
     <link rel="stylesheet" href="css/calendar.genghis-khan-arrow.css">
     <link rel="stylesheet" href="css/calendar.okinawa-breeze.css">
     <link rel="stylesheet" href="css/calendar.weekend-downtime.css">
+    <link rel="stylesheet" href="css/calendar.dartagnans-rapier.css">
 
 
 
@@ -250,6 +251,7 @@
                 <option value="genghis-khan-arrow">Genghis Khan Arrow</option>
                 <option value="okinawa-breeze">Okinawa Breeze</option>
                 <option value="weekend-downtime">Weekend Downtime</option>
+                <option value="dartagnans-rapier">D'Artagnan's Rapier</option>
                 
                 
 
