--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
     <link rel="stylesheet" href="css/calendar.okinawa-breeze.css">
     <link rel="stylesheet" href="css/calendar.weekend-downtime.css">
     <link rel="stylesheet" href="css/calendar.dartagnans-rapier.css">
+    <link rel="stylesheet" href="css/calendar.maple-leaf-fall.css">
 
 
 
@@ -252,6 +253,7 @@
                 <option value="okinawa-breeze">Okinawa Breeze</option>
                 <option value="weekend-downtime">Weekend Downtime</option>
                 <option value="dartagnans-rapier">D'Artagnan's Rapier</option>
+                <option value="maple-leaf-fall">Maple Leaf Fall</option>
                 
                 
 
