--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
     <link rel="stylesheet" href="css/calendar.weekend-downtime.css">
     <link rel="stylesheet" href="css/calendar.dartagnans-rapier.css">
     <link rel="stylesheet" href="css/calendar.maple-leaf-fall.css">
+    <link rel="stylesheet" href="css/calendar.lions-mane.css">
 
     <style>
         /* Styles for event markers (adjust as needed) */
@@ -196,7 +197,8 @@
         </div>
 
         <div class="controls">
-            <button class="transparent-button" id="clear-events-btn" aria-label="Clear All Events">Clear All Events</button>
+            <button class="transparent-button" id="clear-events-btn" aria-label="Clear All Events">Clear All
+                Events</button>
             <select id="theme-switcher" aria-label="Theme Switcher">
                 <option value="core">Light Mode</option>
                 <option value="dark-mode">Dark Mode</option>
@@ -289,11 +291,14 @@
                 <option value="the-last-mohican">The Last Mohican</option>
                 <option value="finish-line">Finish Line</option>
                 <option value="porcupine-quill">Porcupine Quill</option>
-                <option value="genghis-khan-arrow">Genghis Khan Arrow</option>
+                <option value="genghis-khan-arrow">Genghis Khan's Arrow</option>
                 <option value="okinawa-breeze">Okinawa Breeze</option>
                 <option value="weekend-downtime">Weekend Downtime</option>
                 <option value="dartagnans-rapier">D'Artagnan's Rapier</option>
                 <option value="maple-leaf-fall">Maple Leaf Fall</option>
+                <option value="lions-mane">Lion's Mane</option>
+
+
             </select>
         </div>
 
