--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
     <link rel="stylesheet" href="css/calendar.dartagnans-rapier.css">
     <link rel="stylesheet" href="css/calendar.maple-leaf-fall.css">
     <link rel="stylesheet" href="css/calendar.lions-mane.css">
+    <link rel="stylesheet" href="css/calendar.cafe-de-colombia.css">
 
     <style>
         /* Styles for event markers (adjust as needed) */
@@ -297,6 +298,7 @@
                 <option value="dartagnans-rapier">D'Artagnan's Rapier</option>
                 <option value="maple-leaf-fall">Maple Leaf Fall</option>
                 <option value="lions-mane">Lion's Mane</option>
+                <option value="cafe-de-colombia">Café de Colombia</option>
 
 
             </select>
