--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
     <link rel="stylesheet" href="css/calendar.maple-leaf-fall.css">
     <link rel="stylesheet" href="css/calendar.lions-mane.css">
     <link rel="stylesheet" href="css/calendar.cafe-de-colombia.css">
+    <link rel="stylesheet" href="css/calendar.moonlit-path.css">
 
     <style>
         /* Styles for event markers (adjust as needed) */
@@ -299,6 +300,7 @@
                 <option value="maple-leaf-fall">Maple Leaf Fall</option>
                 <option value="lions-mane">Lion's Mane</option>
                 <option value="cafe-de-colombia">Café de Colombia</option>
+                <option value="moonlit-path">Moonlit Path</option>
 
 
             </select>
