--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
     <link rel="stylesheet" href="css/calendar.lions-mane.css">
     <link rel="stylesheet" href="css/calendar.cafe-de-colombia.css">
     <link rel="stylesheet" href="css/calendar.moonlit-path.css">
+    <link rel="stylesheet" href="css/calendar.macaroni-penguin.css">
 
     <style>
         /* Styles for event markers (adjust as needed) */
@@ -301,6 +302,7 @@
                 <option value="lions-mane">Lion's Mane</option>
                 <option value="cafe-de-colombia">Café de Colombia</option>
                 <option value="moonlit-path">Moonlit Path</option>
+                <option value="macaroni-penguin">Macaroni Penguin</option>
 
 
             </select>
