--- a/index.html
+++ b/index.html
@@ -110,6 +110,8 @@
     <link rel="stylesheet" href="css/calendar.cafe-de-colombia.css">
     <link rel="stylesheet" href="css/calendar.moonlit-path.css">
     <link rel="stylesheet" href="css/calendar.macaroni-penguin.css">
+    <link rel="stylesheet" href="css/calendar.ocean-vortex.css">
+
 
     <style>
         /* Styles for event markers (adjust as needed) */
@@ -303,6 +305,7 @@
                 <option value="cafe-de-colombia">Café de Colombia</option>
                 <option value="moonlit-path">Moonlit Path</option>
                 <option value="macaroni-penguin">Macaroni Penguin</option>
+                <option value="ocean-vortex">Ocean Vortex</option>
 
 
             </select>
