--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
     <link rel="stylesheet" href="css/calendar.moonlit-path.css">
     <link rel="stylesheet" href="css/calendar.macaroni-penguin.css">
     <link rel="stylesheet" href="css/calendar.ocean-vortex.css">
+    <link rel="stylesheet" href="css/calendar.great-lakes.css">
 
 
     <style>
@@ -306,6 +307,7 @@
                 <option value="moonlit-path">Moonlit Path</option>
                 <option value="macaroni-penguin">Macaroni Penguin</option>
                 <option value="ocean-vortex">Ocean Vortex</option>
+                <option value="great-lakes">Great Lakes</option>
 
 
             </select>
