--- a/index.html
+++ b/index.html
@@ -112,6 +112,8 @@
     <link rel="stylesheet" href="css/calendar.macaroni-penguin.css">
     <link rel="stylesheet" href="css/calendar.ocean-vortex.css">
     <link rel="stylesheet" href="css/calendar.great-lakes.css">
+    <link rel="stylesheet" href="css/calendar.quiet-evening.css">
+
 
 
     <style>
@@ -308,6 +310,7 @@
                 <option value="macaroni-penguin">Macaroni Penguin</option>
                 <option value="ocean-vortex">Ocean Vortex</option>
                 <option value="great-lakes">Great Lakes</option>
+                <option value="quiet-evening">Quiet Evening</option>
 
 
             </select>
