--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
     <link rel="stylesheet" href="css/calendar.ocean-vortex.css">
     <link rel="stylesheet" href="css/calendar.great-lakes.css">
     <link rel="stylesheet" href="css/calendar.quiet-evening.css">
+    <link rel="stylesheet" href="css/calendar.crimson-sky.css">
 
 
 
@@ -311,6 +312,7 @@
                 <option value="ocean-vortex">Ocean Vortex</option>
                 <option value="great-lakes">Great Lakes</option>
                 <option value="quiet-evening">Quiet Evening</option>
+                <option value="crimson-sky">Crimson Sky</option>
 
 
             </select>
