--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
     <link rel="stylesheet" href="css/calendar.great-lakes.css">
     <link rel="stylesheet" href="css/calendar.quiet-evening.css">
     <link rel="stylesheet" href="css/calendar.crimson-sky.css">
+    <link rel="stylesheet" href="css/calendar.viktoria-falls.css">
 
 
 
@@ -313,6 +314,7 @@
                 <option value="great-lakes">Great Lakes</option>
                 <option value="quiet-evening">Quiet Evening</option>
                 <option value="crimson-sky">Crimson Sky</option>
+                <option value="viktoria-falls">Viktoria Falls</option>
 
 
             </select>
