--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
     <link rel="stylesheet" href="css/calendar.quiet-evening.css">
     <link rel="stylesheet" href="css/calendar.crimson-sky.css">
     <link rel="stylesheet" href="css/calendar.viktoria-falls.css">
+    <link rel="stylesheet" href="css/calendar.everest-view.css">
 
 
 
@@ -315,6 +316,7 @@
                 <option value="quiet-evening">Quiet Evening</option>
                 <option value="crimson-sky">Crimson Sky</option>
                 <option value="viktoria-falls">Viktoria Falls</option>
+                <option value="everest-view">Everest View</option>
 
 
             </select>
