--- a/index.html
+++ b/index.html
@@ -116,6 +116,8 @@
     <link rel="stylesheet" href="css/calendar.crimson-sky.css">
     <link rel="stylesheet" href="css/calendar.viktoria-falls.css">
     <link rel="stylesheet" href="css/calendar.everest-view.css">
+    <link rel="stylesheet" href="css/calendar.amazon-river.css">
+
 
 
 
@@ -317,6 +319,8 @@
                 <option value="crimson-sky">Crimson Sky</option>
                 <option value="viktoria-falls">Viktoria Falls</option>
                 <option value="everest-view">Everest View</option>
+                <option value="amazon-river">Amazon River</option>
+
 
 
             </select>
