--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
     <link rel="stylesheet" href="css/calendar.viktoria-falls.css">
     <link rel="stylesheet" href="css/calendar.everest-view.css">
     <link rel="stylesheet" href="css/calendar.amazon-river.css">
+    <link rel="stylesheet" href="css/calendar.dragonfly.css">
 
 
 
@@ -320,6 +321,8 @@
                 <option value="viktoria-falls">Viktoria Falls</option>
                 <option value="everest-view">Everest View</option>
                 <option value="amazon-river">Amazon River</option>
+                <option value="dragonfly">Dragonfly</option>
+
 
 
 
