--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
     <link rel="stylesheet" href="css/calendar.everest-view.css">
     <link rel="stylesheet" href="css/calendar.amazon-river.css">
     <link rel="stylesheet" href="css/calendar.dragonfly.css">
+    <link rel="stylesheet" href="css/calendar.wild-rose.css">
 
 
 
@@ -322,6 +323,7 @@
                 <option value="everest-view">Everest View</option>
                 <option value="amazon-river">Amazon River</option>
                 <option value="dragonfly">Dragonfly</option>
+                <option value="wild-rose">Wild Rose</option>
 
 
 
