--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
     <link rel="stylesheet" href="css/calendar.amazon-river.css">
     <link rel="stylesheet" href="css/calendar.dragonfly.css">
     <link rel="stylesheet" href="css/calendar.wild-rose.css">
+    <link rel="stylesheet" href="css/calendar.morning-forest.css">
 
 
 
@@ -324,6 +325,7 @@
                 <option value="amazon-river">Amazon River</option>
                 <option value="dragonfly">Dragonfly</option>
                 <option value="wild-rose">Wild Rose</option>
+                <option value="morning-forest">Morning Forest</option>
 
 
 
