--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
     <link rel="stylesheet" href="css/calendar.dragonfly.css">
     <link rel="stylesheet" href="css/calendar.wild-rose.css">
     <link rel="stylesheet" href="css/calendar.morning-forest.css">
+    <link rel="stylesheet" href="css/calendar.crystal-stream.css">
 
 
 
@@ -326,6 +327,8 @@
                 <option value="dragonfly">Dragonfly</option>
                 <option value="wild-rose">Wild Rose</option>
                 <option value="morning-forest">Morning Forest</option>
+                <option value="crystal-stream">Crystal Stream</option>
+
 
 
 
