--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
     <link rel="stylesheet" href="css/calendar.wild-rose.css">
     <link rel="stylesheet" href="css/calendar.morning-forest.css">
     <link rel="stylesheet" href="css/calendar.crystal-stream.css">
+    <link rel="stylesheet" href="css/calendar.black-velvet.css">
 
 
 
@@ -328,6 +329,7 @@
                 <option value="wild-rose">Wild Rose</option>
                 <option value="morning-forest">Morning Forest</option>
                 <option value="crystal-stream">Crystal Stream</option>
+                <option value="black-velvet">Black Velvet</option>
 
 
 
