--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/calendar.variables.css">
     <link rel="stylesheet" href="css/calendar.core.css">
     <link rel="stylesheet" href="css/calendar.responsive.css">
@@ -124,6 +125,7 @@
     <link rel="stylesheet" href="css/calendar.crystal-stream.css">
     <link rel="stylesheet" href="css/calendar.black-velvet.css">
     <link rel="stylesheet" href="css/calendar.adriatic-sea.css">
+    <link rel="stylesheet" href="css/calendar.sea-star.css">
 
 
 
@@ -333,6 +335,7 @@
                 <option value="crystal-stream">Crystal Stream</option>
                 <option value="black-velvet">Black Velvet</option>
                 <option value="adriatic-sea">Adriatic Sea</option>
+                <option value="sea-star">Sea Star</option>
                                
                            
 
