--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/calendar.variables.css">
     <link rel="stylesheet" href="css/calendar.core.css">
     <link rel="stylesheet" href="css/calendar.responsive.css">
@@ -126,6 +127,7 @@
     <link rel="stylesheet" href="css/calendar.black-velvet.css">
     <link rel="stylesheet" href="css/calendar.adriatic-sea.css">
     <link rel="stylesheet" href="css/calendar.sea-star.css">
+    <link rel="stylesheet" href="css/calendar.royal-caribbean.css">
 
 
 
@@ -336,6 +338,7 @@
                 <option value="black-velvet">Black Velvet</option>
                 <option value="adriatic-sea">Adriatic Sea</option>
                 <option value="sea-star">Sea Star</option>
+                <option value="royal-caribbean">Royal Carribean</option>
                                
                            
 
