--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Interactive Calendar</title>
 
     <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
@@ -128,6 +129,7 @@
     <link rel="stylesheet" href="css/calendar.adriatic-sea.css">
     <link rel="stylesheet" href="css/calendar.sea-star.css">
     <link rel="stylesheet" href="css/calendar.royal-caribbean.css">
+    <link rel="stylesheet" href="css/calendar.abandoned-castle.css">
 
 
 
@@ -339,7 +341,7 @@
                 <option value="adriatic-sea">Adriatic Sea</option>
                 <option value="sea-star">Sea Star</option>
                 <option value="royal-caribbean">Royal Carribean</option>
-                               
+                <option value="abandoned-castle">Abandoned Castle</option>
                            
 
 
