--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
     <link rel="stylesheet" href="css/calendar.sea-star.css">
     <link rel="stylesheet" href="css/calendar.royal-caribbean.css">
     <link rel="stylesheet" href="css/calendar.abandoned-castle.css">
+    <link rel="stylesheet" href="css/calendar.red-squirrel.css">
 
 
 
@@ -342,6 +343,7 @@
                 <option value="sea-star">Sea Star</option>
                 <option value="royal-caribbean">Royal Carribean</option>
                 <option value="abandoned-castle">Abandoned Castle</option>
+                <option value="red-squirrel">Red Squirrel</option>
                            
 
 
