--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
     <link rel="stylesheet" href="css/calendar.royal-caribbean.css">
     <link rel="stylesheet" href="css/calendar.abandoned-castle.css">
     <link rel="stylesheet" href="css/calendar.red-squirrel.css">
+    <link rel="stylesheet" href="css/calendar.shift-in-perception.css">
 
 
 
@@ -344,6 +345,7 @@
                 <option value="royal-caribbean">Royal Carribean</option>
                 <option value="abandoned-castle">Abandoned Castle</option>
                 <option value="red-squirrel">Red Squirrel</option>
+                <option value="shift-in-perception">Shift in Percepiton</option>
                            
 
 
