--- a/index.html
+++ b/index.html
@@ -132,6 +132,8 @@
     <link rel="stylesheet" href="css/calendar.abandoned-castle.css">
     <link rel="stylesheet" href="css/calendar.red-squirrel.css">
     <link rel="stylesheet" href="css/calendar.shift-in-perception.css">
+    <link rel="stylesheet" href="css/calendar.migratory-birds.css">
+
 
 
 
@@ -346,6 +348,7 @@
                 <option value="abandoned-castle">Abandoned Castle</option>
                 <option value="red-squirrel">Red Squirrel</option>
                 <option value="shift-in-perception">Shift in Percepiton</option>
+                <option value="migratory-birds">Migratory Birds</option>
                            
 
 
