--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
     <link rel="stylesheet" href="css/calendar.cafe-de-colombia.css">
     <link rel="stylesheet" href="css/calendar.calendar.cherry-garden.css">
     <link rel="stylesheet" href="css/calendar.candy-world.css">
+    <link rel="stylesheet" href="css/calendar.cardinals-guards.css">
     <link rel="stylesheet" href="css/calendar.cherry-garden.css">
     <link rel="stylesheet" href="css/calendar.cracked-ice.css">
     <link rel="stylesheet" href="css/calendar.crimson-sky.css">
@@ -255,6 +256,7 @@
                 <option value="cacao-plantation">Cacao Plantation</option>
                 <option value="cafe-de-colombia">Café de Colombia</option>
                 <option value="candy-world">Candy World</option>
+                <option value="cardinals-guards">Cardinal's Guards</option>
                 <option value="cherry-garden">Cherry Garden</option>
                 <option value="cracked-ice">Cracked Ice</option>
                 <option value="crimson-sky">Crimson Sky</option>
