--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
     <link rel="stylesheet" href="css/calendar.spring-meadow.css">
     <link rel="stylesheet" href="css/calendar.steel-shadows.css">
     <link rel="stylesheet" href="css/calendar.stockholm-roofs.css">
+    <link rel="stylesheet" href="css/calendar.sword-of-fate.css">
     <link rel="stylesheet" href="css/calendar.the-last-mohican.css">
     <link rel="stylesheet" href="css/calendar.time-machine.css">
     <link rel="stylesheet" href="css/calendar.tropical-sunset.css">
@@ -339,6 +340,7 @@
                 <option value="spring-meadow">Spring Meadow</option>
                 <option value="steel-shadows">Steel Shadows</option>
                 <option value="stockholm-roofs">Stockholm-Roofs</option>
+                <option value="sword-of-fate">Sword of Fate</option>
                 <option value="the-last-mohican">The Last Mohican</option>
                 <option value="time-machine">Time Machine</option>
                 <option value="tropical-sunset">Tropical Sunset</option>
