--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
     <link rel="stylesheet" href="css/calendar.candy-world.css">
     <link rel="stylesheet" href="css/calendar.cardinals-guards.css">
     <link rel="stylesheet" href="css/calendar.cherry-garden.css">
+    <link rel="stylesheet" href="css/calendar.cinnamon.street.css">
     <link rel="stylesheet" href="css/calendar.cracked-ice.css">
     <link rel="stylesheet" href="css/calendar.crimson-sky.css">
     <link rel="stylesheet" href="css/calendar.crystal-snowfall.css">
@@ -259,6 +260,7 @@
                 <option value="candy-world">Candy World</option>
                 <option value="cardinals-guards">Cardinal's Guards</option>
                 <option value="cherry-garden">Cherry Garden</option>
+                <option value="cinnamon-street">Cinnamon Street</option>
                 <option value="cracked-ice">Cracked Ice</option>
                 <option value="crimson-sky">Crimson Sky</option>
                 <option value="crystal-snowfall">Crystal Snowfall</option>
