--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
     <link rel="stylesheet" href="css/calendar.hurricane-clouds.css">
     <link rel="stylesheet" href="css/calendar.kilimanjaro-outskirts.css">
     <link rel="stylesheet" href="css/calendar.lavender-bliss.css">
+    <link rel="stylesheet" href="css/calendar.lemongrass-sky.css">
     <link rel="stylesheet" href="css/calendar.lions-mane.css">
     <link rel="stylesheet" href="css/calendar.macaroni-penguin.css">
     <link rel="stylesheet" href="css/calendar.magellanic-penguin.css">
@@ -292,6 +293,7 @@
                 <option value="kilimanjaro-outskirts">Kilimanjaro Outskirts</option>
                 <option value="lavender-bliss">Lavender Bliss</option>
                 <option value="core">Light Mode</option>
+                <option value="lemongrass-sky">Lemongrass Sky</option>
                 <option value="lions-mane">Lion's Mane</option>
                 <option value="macaroni-penguin">Macaroni Penguin</option>
                 <option value="magellanic-penguin">Magellanic Penguin</option>
