--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="css/calendar.alpine-landscape.css">
     <link rel="stylesheet" href="css/calendar.amazon-dolphin.css">
     <link rel="stylesheet" href="css/calendar.amazon-river.css">
+    <link rel="stylesheet" href="css/calendar.antarctic-snowdrifts.css">
     <link rel="stylesheet" href="css/calendar.arctic-glow.css">
     <link rel="stylesheet" href="css/calendar.autumn-harvest.css">
     <link rel="stylesheet" href="css/calendar.bamboo-flute.css">
