--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
     <link rel="stylesheet" href="css/calendar.macaroni-penguin.css">
     <link rel="stylesheet" href="css/calendar.magellanic-penguin.css">
     <link rel="stylesheet" href="css/calendar.maple-leaf-fall.css">
+    <link rel="stylesheet" href="css/calendar.maple-syrup.css">
     <link rel="stylesheet" href="css/calendar.medieval-knights.css">
     <link rel="stylesheet" href="css/calendar.melting-glaciers.css">
     <link rel="stylesheet" href="css/calendar.midnight-train.css">
@@ -299,6 +300,7 @@
                 <option value="macaroni-penguin">Macaroni Penguin</option>
                 <option value="magellanic-penguin">Magellanic Penguin</option>
                 <option value="maple-leaf-fall">Maple Leaf Fall</option>
+                <option value="maple-syrup">Maple Syrup</option>
                 <option value="medieval-knights">Medieval Knights</option>
                 <option value="melting-glaciers">Melting Glaciers</option>
                 <option value="midnight-train">Midnight Train</option>
