--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
     <link rel="stylesheet" href="css/calendar.red-lake.css">
     <link rel="stylesheet" href="css/calendar.red-squirrel.css">
     <link rel="stylesheet" href="css/calendar.rising-sun.css">
+    <link rel="stylesheet" href="css/calendar.robin-good.css">
     <link rel="stylesheet" href="css/calendar.royal-caribbean.css">
     <link rel="stylesheet" href="css/calendar.sea-diamonds.css">
     <link rel="stylesheet" href="css/calendar.sea-lions.css">
@@ -332,6 +333,7 @@
                 <option value="red-lake">Red Lake</option>
                 <option value="red-squirrel">Red Squirrel</option>
                 <option value="rising-sun">Rising Sun</option>
+                <option value="robin-good">Robin Good</option>
                 <option value="royal-caribbean">Royal Carribean</option>
                 <option value="sea-diamonds">Sea Diamonds</option>
                 <option value="sea-lions">Sea Lions</option>
