--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
     <link rel="stylesheet" href="css/calendar.great-lakes.css">
     <link rel="stylesheet" href="css/calendar.great-wall.css">
     <link rel="stylesheet" href="css/calendar.green-coffee.css">
+    <link rel="stylesheet" href="css/calendar.greenland-icebergs.css">
     <link rel="stylesheet" href="css/calendar.greyscale.css">
     <link rel="stylesheet" href="css/calendar.heavy-rain.css">
     <link rel="stylesheet" href="css/calendar.hurricane-clouds.css">
@@ -290,6 +291,7 @@
                 <option value="great-lakes">Great Lakes</option>
                 <option value="great-wall">Great Wall</option>
                 <option value="green-coffee">Green Coffee</option>
+                <option value="greenland-icebergs">Greenland Icebergs</option>
                 <option value="greyscale">Greyscale</option>
                 <option value="heavy-rain">Heavy Rain</option>
                 <option value="hurricane-clouds">Hurricane Clouds</option>
