--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
                 <option value="great-lakes">Great Lakes</option>
                 <option value="great-wall">Great Wall</option>
                 <option value="green-coffee">Green Coffee</option>
-                <option value="greenland-icebergs">Greenland Icebergs</option>
+                <option value="greenland-icebergs">Greenland’s Icebergs</option>
                 <option value="greyscale">Greyscale</option>
                 <option value="heavy-rain">Heavy Rain</option>
                 <option value="hurricane-clouds">Hurricane Clouds</option>
