--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
     <link rel="stylesheet" href="css/calendar.forgotten-dreams.css">
     <link rel="stylesheet" href="css/calendar.galactic-glow.css">
     <link rel="stylesheet" href="css/calendar.genghis-khan-arrow.css">
+    <link rel="stylesheet" href="css/calendar.giant-petrel.css">
     <link rel="stylesheet" href="css/calendar.golden-gate.css">
     <link rel="stylesheet" href="css/calendar.golden-horizon.css">
     <link rel="stylesheet" href="css/calendar.great-lakes.css">
@@ -286,6 +287,7 @@
                 <option value="forgotten-dreams">Forgotten Dreams</option>
                 <option value="galactic-glow">Galactic Glow</option>
                 <option value="genghis-khan-arrow">Genghis Khan's Arrow</option>
+                <option value="giant-petrel">Giant Petrel</option>
                 <option value="golden-gate">Golden Gate</option>
                 <option value="golden-horizon">Golden Horizon</option>
                 <option value="great-lakes">Great Lakes</option>
