--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
     <link rel="stylesheet" href="css/calendar.niagara-falls.css">
     <link rel="stylesheet" href="css/calendar.north-pole.css">
     <link rel="stylesheet" href="css/calendar.northern-nights.css">
+    <link rel="stylesheet" href="css/calendar.ocean-surf.css">
     <link rel="stylesheet" href="css/calendar.ocean-view.css">
     <link rel="stylesheet" href="css/calendar.ocean-vortex.css">
     <link rel="stylesheet" href="css/calendar.okinawa-breeze.css">
@@ -320,6 +321,7 @@
                 <option value="niagara-falls">Niagara Falls</option>
                 <option value="north-pole">North Pole</option>
                 <option value="northern-nights">Northern Nights</option>
+                <option value="ocean-surf">Ocean Surf</option>
                 <option value="ocean-view">Ocean View</option>
                 <option value="ocean-vortex">Ocean Vortex</option>
                 <option value="okinawa-breeze">Okinawa Breeze</option>
