--- a/index.html
+++ b/index.html
@@ -143,10 +143,6 @@
     <link rel="stylesheet" href="css/calendar.wild-wonders.css">
     <link rel="stylesheet" href="css/calendar.winter-wonderland.css">
 
-
-
-
-
     <style>
         /* Styles for event markers (adjust as needed) */
         .event-marker-container {
@@ -212,6 +208,13 @@
             left: 10%;
             height: 8px;
             background: #333;
+        }
+
+        /* Weather Info Styles */
+        .weather-info {
+            font-size: 12px;
+            color: #555;
+            margin-top: 5px;
         }
     </style>
 </head>
@@ -340,7 +343,7 @@
                 <option value="red-squirrel">Red Squirrel</option>
                 <option value="rising-sun">Rising Sun</option>
                 <option value="robin-good">Robin Good</option>
-                <option value="royal-caribbean">Royal Carribean</option>
+                <option value="royal-caribbean">Royal Caribbean</option>
                 <option value="sea-diamonds">Sea Diamonds</option>
                 <option value="sea-lions">Sea Lions</option>
                 <option value="sea-star">Sea Star</option>
@@ -348,13 +351,13 @@
                 <option value="secretive-ninja">Secretive Ninja</option>
                 <option value="serene-shores">Serene Shores</option>
                 <option value="shaolin-monastery">Shaolin Monastery</option>
-                <option value="shift-in-perception">Shift in Percepiton</option>
+                <option value="shift-in-perception">Shift in Perception</option>
                 <option value="silicon-valley">Silicon Valley</option>
                 <option value="sky-eagle">Sky Eagle</option>
                 <option value="solar-flare">Solar Flare</option>
                 <option value="spring-meadow">Spring Meadow</option>
                 <option value="steel-shadows">Steel Shadows</option>
-                <option value="stockholm-roofs">Stockholm-Roofs</option>
+                <option value="stockholm-roofs">Stockholm Roofs</option>
                 <option value="sword-of-fate">Sword of Fate</option>
                 <option value="the-last-mohican">The Last Mohican</option>
                 <option value="time-machine">Time Machine</option>
@@ -366,10 +369,6 @@
                 <option value="wild-rose">Wild Rose</option>
                 <option value="wild-wonders">Wild Wonders</option>
                 <option value="winter-wonderland">Winter Wonderland</option>
-
-
-
-
             </select>
         </div>
 
