--- a/index.html
+++ b/index.html
@@ -6,12 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Interactive Calendar</title>
 
+    <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
+
+    <!-- Theme CSS Files -->
     <link rel="stylesheet" href="css/calendar.variables.css">
     <link rel="stylesheet" href="css/calendar.core.css">
     <link rel="stylesheet" href="css/calendar.responsive.css">
@@ -40,11 +43,10 @@
     <link rel="stylesheet" href="css/calendar.bronze-horseman.css">
     <link rel="stylesheet" href="css/calendar.cacao-plantation.css">
     <link rel="stylesheet" href="css/calendar.cafe-de-colombia.css">
-    <link rel="stylesheet" href="css/calendar.calendar.cherry-garden.css">
+    <link rel="stylesheet" href="css/calendar.cherry-garden.css">
     <link rel="stylesheet" href="css/calendar.candy-world.css">
     <link rel="stylesheet" href="css/calendar.cardinals-guards.css">
-    <link rel="stylesheet" href="css/calendar.cherry-garden.css">
-    <link rel="stylesheet" href="css/calendar.cinnamon.street.css">
+    <link rel="stylesheet" href="css/calendar.cinnamon-street.css">
     <link rel="stylesheet" href="css/calendar.cracked-ice.css">
     <link rel="stylesheet" href="css/calendar.crimson-sky.css">
     <link rel="stylesheet" href="css/calendar.crystal-snowfall.css">
@@ -143,28 +145,89 @@
     <link rel="stylesheet" href="css/calendar.wild-wonders.css">
     <link rel="stylesheet" href="css/calendar.winter-wonderland.css">
 
+    <!-- Custom Styles -->
     <style>
-        /* Styles for event markers (adjust as needed) */
-        .event-marker-container {
-            position: relative;
-            display: inline-block;
-            vertical-align: middle;
-            margin-right: 5px;
+        /* General Styles */
+        body {
+            font-family: 'Roboto', sans-serif;
+            background-color: #f4f4f4;
+            color: #333;
+            margin: 0;
+            padding: 0;
         }
 
-        .event-marker {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            width: 8px;
-            height: 8px;
-            border-radius: 50%;
-            z-index: 10;
-            pointer-events: none;
+        .container {
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 20px;
         }
 
-        /* Analog Watch Styles */
+        h1 {
+            text-align: center;
+            font-family: 'Cinzel', serif;
+            color: #333;
+        }
+
+        /* Calendar Styles */
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-top: 20px;
+        }
+
+        th, td {
+            padding: 10px;
+            text-align: center;
+            border: 1px solid #ddd;
+        }
+
+        th {
+            background-color: #f8f8f8;
+            font-weight: bold;
+        }
+
+        td {
+            cursor: pointer;
+        }
+
+        td:hover {
+            background-color: #f0f0f0;
+        }
+
+        .current-day {
+            background-color: #ffcccb;
+            font-weight: bold;
+        }
+
+        /* Modal Styles */
+        .modal {
+            display: none;
+            position: fixed;
+            z-index: 1000;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.5);
+            justify-content: center;
+            align-items: center;
+        }
+
+        .modal-content {
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 5px;
+            width: 300px;
+            text-align: center;
+        }
+
+        .close-button {
+            float: right;
+            cursor: pointer;
+            font-size: 24px;
+        }
+
+        /* Analog Clock Styles */
         #analog-watch {
             display: flex;
             justify-content: center;
@@ -216,12 +279,36 @@
             color: #555;
             margin-top: 5px;
         }
+
+        /* Back to Top Button */
+        .back-to-top-button {
+            display: none;
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            padding: 10px 20px;
+            background-color: #333;
+            color: #fff;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+
+        .back-to-top-button:hover {
+            background-color: #555;
+        }
     </style>
 </head>
 
 <body>
     <div class="container">
         <h1 id="calendar-title">Interactive Calendar</h1>
+
+        <!-- Date and Weather Display -->
+        <div id="date-weather-container">
+            <div id="current-date"></div>
+            <div id="today-weather"></div>
+        </div>
 
         <!-- Analog Watch -->
         <div id="analog-watch">
@@ -232,6 +319,7 @@
             </div>
         </div>
 
+        <!-- Calendar Controls -->
         <div class="controls">
             <button class="transparent-button" id="prev-year-btn" aria-label="Previous Year">Previous Year</button>
             <span id="current-year"></span>
@@ -239,8 +327,7 @@
         </div>
 
         <div class="controls">
-            <button class="transparent-button" id="clear-events-btn" aria-label="Clear All Events">Clear All
-                Events</button>
+            <button class="transparent-button" id="clear-events-btn" aria-label="Clear All Events">Clear All Events</button>
             <select id="theme-switcher" aria-label="Theme Switcher">
                 <option value="abandoned-castle">Abandoned Castle</option>
                 <option value="adriatic-sea">Adriatic Sea</option>
@@ -252,7 +339,7 @@
                 <option value="arctic-glow">Arctic Glow</option>
                 <option value="autumn-harvest">Autumn Harvest</option>
                 <option value="bamboo-flute">Bamboo Flute</option>
-                <option value="battle-of-the-ice">Battle of the ice</option>
+                <option value="battle-of-the-ice">Battle of the Ice</option>
                 <option value="bermuda-triangle">Bermuda Triangle</option>
                 <option value="best-practice">Best Practice</option>
                 <option value="black-coffee">Black Coffee</option>
