--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
         }
 
         .container {
-            max-width: 1200px;
+            max-width: 1600px; /* Increased width for wide screens */
             margin: 0 auto;
             padding: 20px;
         }
@@ -166,6 +166,7 @@
             text-align: center;
             font-family: 'Cinzel', serif;
             color: #333;
+            font-size: 2.5em; /* Larger font size for wide screens */
         }
 
         /* Calendar Styles */
@@ -176,9 +177,10 @@
         }
 
         th, td {
-            padding: 10px;
+            padding: 20px; /* Increased padding for better spacing */
             text-align: center;
             border: 1px solid #ddd;
+            font-size: 1.2em; /* Larger font size for better readability */
         }
 
         th {
@@ -188,6 +190,7 @@
 
         td {
             cursor: pointer;
+            height: 100px; /* Increased cell height for better visibility */
         }
 
         td:hover {
@@ -215,16 +218,16 @@
 
         .modal-content {
             background-color: #fff;
-            padding: 20px;
-            border-radius: 5px;
-            width: 300px;
+            padding: 30px; /* Increased padding for better spacing */
+            border-radius: 10px;
+            width: 400px; /* Wider modal for better content display */
             text-align: center;
         }
 
         .close-button {
             float: right;
             cursor: pointer;
-            font-size: 24px;
+            font-size: 28px; /* Larger close button */
         }
 
         /* Analog Clock Styles */
@@ -232,13 +235,13 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            margin: 20px;
+            margin: 30px; /* Increased margin for better spacing */
         }
 
         .clock-face {
-            width: 150px;
-            height: 150px;
-            border: 10px solid #333;
+            width: 200px; /* Larger clock face */
+            height: 200px;
+            border: 12px solid #333; /* Thicker border */
             border-radius: 50%;
             position: relative;
             background-color: #fff;
@@ -246,7 +249,7 @@
 
         .hand {
             width: 50%;
-            height: 6px;
+            height: 8px; /* Thicker hands */
             background: #333;
             position: absolute;
             top: 50%;
@@ -257,41 +260,42 @@
         }
 
         .second-hand {
-            height: 3px;
+            height: 4px; /* Thicker second hand */
             background: red;
         }
 
         .minute-hand {
-            height: 6px;
+            height: 8px; /* Thicker minute hand */
             background: #333;
         }
 
         .hour-hand {
             width: 40%;
             left: 10%;
-            height: 8px;
+            height: 10px; /* Thicker hour hand */
             background: #333;
         }
 
         /* Weather Info Styles */
         .weather-info {
-            font-size: 12px;
+            font-size: 14px; /* Larger font size for weather info */
             color: #555;
-            margin-top: 5px;
+            margin-top: 10px; /* Increased margin for better spacing */
         }
 
         /* Back to Top Button */
         .back-to-top-button {
             display: none;
             position: fixed;
-            bottom: 20px;
-            right: 20px;
-            padding: 10px 20px;
+            bottom: 30px; /* Increased distance from bottom */
+            right: 30px; /* Increased distance from right */
+            padding: 15px 30px; /* Larger padding for better visibility */
             background-color: #333;
             color: #fff;
             border: none;
             border-radius: 5px;
             cursor: pointer;
+            font-size: 1.1em; /* Larger font size */
         }
 
         .back-to-top-button:hover {
