--- a/index.html
+++ b/index.html
@@ -301,6 +301,23 @@
         .back-to-top-button:hover {
             background-color: #555;
         }
+
+        /* Custom Styles for Date and Weather */
+        #date-weather-container {
+            text-align: center;
+            margin: 20px 0;
+        }
+
+        #current-date, #today-weather {
+            font-size: 1.8em; /* Bigger font size */
+            font-weight: bold; /* Bold text */
+            color: #333; /* Darker color for better visibility */
+            margin: 10px 0; /* Add some spacing */
+        }
+
+        #today-weather {
+            font-style: italic; /* Optional: Add italic style for weather */
+        }
     </style>
 </head>
 
