--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
     <link rel="stylesheet" href="css/calendar.lions-mane.css">
     <link rel="stylesheet" href="css/calendar.macaroni-penguin.css">
     <link rel="stylesheet" href="css/calendar.magellanic-penguin.css">
+    <link rel="stylesheet" href="css/calendar.mammoth-tusk.css">
     <link rel="stylesheet" href="css/calendar.maple-leaf-fall.css">
     <link rel="stylesheet" href="css/calendar.maple-syrup.css">
     <link rel="stylesheet" href="css/calendar.medieval-knights.css">
@@ -416,6 +417,7 @@
                 <option value="lions-mane">Lion's Mane</option>
                 <option value="macaroni-penguin">Macaroni Penguin</option>
                 <option value="magellanic-penguin">Magellanic Penguin</option>
+                <option value="mammoth-tusk">Mammoth Tusk</option>
                 <option value="maple-leaf-fall">Maple Leaf Fall</option>
                 <option value="maple-syrup">Maple Syrup</option>
                 <option value="medieval-knights">Medieval Knights</option>
