--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
     <link rel="stylesheet" href="css/calendar.dragon-flame.css">
     <link rel="stylesheet" href="css/calendar.dragonfly.css">
     <link rel="stylesheet" href="css/calendar.emerald-stream.css">
+    <link rel="stylesheet" href="css/calendar.emperor-penguin.css">
     <link rel="stylesheet" href="css/calendar.everest-view.css">
     <link rel="stylesheet" href="css/calendar.exotic-island.css">
     <link rel="stylesheet" href="css/calendar.finish-line.css">
@@ -392,6 +393,7 @@
                 <option value="dragon-flame">Dragon Flame</option>
                 <option value="dragonfly">Dragonfly</option>
                 <option value="emerald-stream">Emerald Stream</option>
+                <option value="emperor-penguin">Emperor Penguin</option>
                 <option value="everest-view">Everest View</option>
                 <option value="exotic-island">Exotic Island</option>
                 <option value="finish-line">Finish Line</option>
